# SportAfisha.RF

./: .env  .gitignore  README.md  compose.yaml  services.sh
application_handling/: README.md  compose.yaml  pyproject.toml
application_handling/app/: broker.py  main.py
application_handling/app/data/: application.py  (+2 more)
athlete_handling/: Dockerfile  compose.yaml  pyproject.toml
athlete_handling/app/: database.py  main.py  models.py  schemas.py
email_sender/: compose.yaml  privatekey.pem  pyproject.toml
email_sender/aiosmtpd/: Dockerfile
email_sender/app/: __main__.py  mail.py  stream.py
event_handling/: Dockerfile  compose.yaml  pyproject.toml
event_handling/app/: handlers.py  main.py  message_broker.py  oauth.py
event_handling/app/api/: __init__.py  create_event.py  get_events.py
event_handling/app/data/: __all_models.py  db.py  events.py
frontend/: Dockerfile  compose.yaml  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  atoms.tsx  index.css  main.tsx
mok/: compose.mok.yaml  pyproject.toml
mok/app/: main.py
oauth2/: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
oauth2/app/: __main__.py  api.py  crud.py  database.py  main.py  memcache.py  models.py  stream.py
oauth2/app/oauth/: __init__.py  dependencies.py  exceptions.py  routers.py  token.py
office_handling/: compose.example.yaml  compose.yaml
office_handling/app/: broker.py  database.py  main.py  models.py  oauth.py  schemas.py
service_template/: Dockerfile  pyproject.toml
service_template/app/: main.py  serve.py
(+13 files in other folders)
